# gh-crawler

./: .gemini_project_memory.json  FEATURES.md  README.md  main.py  pyproject.toml
src/github_crawler/: agent.py  cli.py  config.py  events.py  github_utils.py  gui.py  main.py  rate_limiter.py  reporting.py  search.py  session_store.py  source_scan.py  ui_handler.py
tests/: test_cli_gui.py  test_config.py  test_session_store.py  test_source_scan.py  test_utils.py
