[project]
name = "gh-crawler"
version = "0.1.0"
description = "A GitHub repository crawler with code scanning and Rich CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.6",
    "pygithub>=2.5.0",
    "rich>=13.0.0",
]

[project.scripts]
gh-crawler = "github_crawler.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/github_crawler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
