[project]
name = "gh-crawler"
version = "0.1.0"
description = "A GitHub repository crawler with code scanning and Rich CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.1.0",
    "openai>=1.0.0",
    "pygithub>=2.5.0",
    "rich>=13.0.0",
    "PyYAML>=6.0.0",
    "pyfiglet>=1.0.2",
    "inquirerpy>=0.3.4",
    "pygount>=3.2.0",
]

[project.scripts]
gh-crawler = "github_crawler.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/github_crawler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
